-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0 Beta1
-
None
-
Mac OS X
-
2884d7c9aafda5ad2d84f1c7a1b4ea2625182885
qmlplugindump fails because it cannot find the platform plugin.
qmlplugindump is in the bin/ directory next to qmake, and we added a qt.conf file to make qmake output the right examples and documentation directories. Unfortunately this qt.conf file is also used for qmlplugindump (which is a command line tool that uses QtGui). Additionally unfortunate, Qt resolves the paths in the qt.conf file relative to qmlplugindump/Contents (which makes sort of sense for apps with an app bundle).
So the qt.conf cannot be used for qmake and for qmlplugindump at the same time, leaving us only with the option to patch the examples and documentation path in qmake directly.
- is replaced by
-
QTBUG-37065 Issues to be fixed before 5.3.0 RC1 release
-
- Closed
-
- relates to
-
QTBUG-37651 Mac: qmlscene cannot start
-
- Closed
-
- replaces
-
QTBUG-29979 strange behaviour when qt.conf in bin exist on mac
-
- Closed
-
| For Gerrit Dashboard: QTBUG-38039 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 82530,1 | OS X: Improve QLibraryInfo app bundle testing. | stable | qt/qtbase | Status: MERGED | +2 | 0 |